--- a/parts/EA.tex
+++ b/parts/EA.tex
@@ -2390,6 +2390,7 @@
 		\[f'(x)=a_{1}+2\cdot a_{2}x+3\cdot a_{3}x^{2}+\dots+n\cdot a_{n}x^{n-1}.\]
 	\end{definition}
 	\begin{proposition}
+		\label{prop:propietats de la derivada formal}
 		Siguin \(\mathbb{K}\) un cos amb la suma \(+\) i el producte \(\cdot\) i \(f(x)\), \(g(x)\) dos polinomis de \(\mathbb{K}\). Aleshores es compleix
 		\begin{enumerate}
 			\item \((a\cdot f(x))'=a\cdot f'(x)\) per a tot \(a\in\mathbb{K}\).
