Tret mathmode dels títols de seccions

--- a/parts/AlgebraLineal.tex
+++ b/parts/AlgebraLineal.tex
@@ -628,7 +628,7 @@
 		\label{corollary:es pot esglaonar qualsevol matriu per columnes}
 		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\). Aleshores \(A\) es pot esglaonar per columnes.
 	\end{corollary}
-	\subsection{Teorema de la \texorpdfstring{\(PAQ\)}{}-reducció}
+	\subsection{Reducció d'una matriu}
 	\begin{theorem}[Teorema de la \(PAQ\)-reducció]
 		\labelname{Teorema de la \ensuremath{PAQ}-reducció}\label{thm:Teorema de la PAQ-reducció}
 		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\). Aleshores existeixen un únic nombre natural \(r\) satisfent \(r\leq\min(m,n)\), una matriu elemental \(P\) d'ordre \(m\) sobre \(\mathbb{K}\) i una matriu elemental \(Q\) d'ordre \(n\) sobre \(\mathbb{K}\) tals que
