--- a/parts/Galois.tex
+++ b/parts/Galois.tex
@@ -248,7 +248,7 @@
 			\(\Irr(\sqrt{5}+\sqrt{3},\QQ)=x^{4}+4x^{2}+64\).
 		\end{solution}
 	\end{example}
-\subsection{El grup~\(\Gal(\FF\extensio\KK)\)}
+\subsection{El grup de Galois}
 	\begin{definition}[El grup de Galois]
 		\labelname{el grup de Galois}\label{def:el grup de Galois}
 		\label{def:grup de Galois}
