--- a/parts/Complexa.tex
+++ b/parts/Complexa.tex
@@ -3,7 +3,7 @@
 \begin{document}
 \part{Anàlisi complexa i de Fourier}
 \chapter{Els nombres complexos}
-\section{Estructura de \ensuremath{\field{C}}}
+\section{Estructura dels nombres complexos}
 	\subsection{Cos de nombres complexos}
 	\begin{notation}[Conjunt de nombres complexos]
 		\label{notation:cos de nombres complexos}
