--- a/NovoTeX/Main.tex
+++ b/NovoTeX/Main.tex
@@ -416,7 +416,7 @@
 	\subfile{BodyMatter/2n/AnalisiMatematic.tex}
 	\subfile{BodyMatter/2n/EstructuresAlgebraiques.tex}
 	\subfile{BodyMatter/2n/MetodesNumerics.tex}
-%	\subfile{BodyMatter/2n/Apendix2n.tex} % Teoria de la mesura
+%	\subfile{BodyMatter/2n/Apendix2n.tex} % Teoria de la mesura (Lebesge o per probabilitat?)
 }
 \newcommand{\tercer}{
 	\book{Tercer curs}
@@ -426,9 +426,9 @@
 	\subfile{BodyMatter/3r/Complexa.tex}
 	\subfile{BodyMatter/3r/GeoDiferencial.tex}
 	\subfile{BodyMatter/3r/EDOS2.tex}
-%	\subfile{BodyMatter/3r/Apendix3r.tex} % Formes diferencials (?)
-}
-
+%	\subfile{BodyMatter/3r/Apendix3r.tex} % Formes diferencials (?) 
+}										  % Tensor calculus (YouTube)
+										  % Àlgebra homològica (Aquesta queda molt lluny, no crec)
 
  %%%%% BACK MATTER %%%%%
 \newcommand{\apendix}{} % No
