--- a/parts/GeoDiferencial.tex
+++ b/parts/GeoDiferencial.tex
@@ -1138,7 +1138,7 @@
 			Aleshores tenim que
 			\[\det(dg(x_{0}))=\det(dF(x_{0})),\]
 			i per \eqref{thm:Teorema d'estructura local de les submersions:eq:1} trobem que
-			\[\det(dg(x_{0})\neq0,\]
+			\[\det(dg(x_{0}))\neq0,\]
 			i pel \myref{thm:Funció inversa} hem acabat.
 		\end{proof}
 	\end{theorem}
