Afegides demostracions a Teoria  de Galois

--- a/parts/EA.tex
+++ b/parts/EA.tex
@@ -2166,7 +2166,7 @@
 		\end{proof}
 	\end{theorem}
 	\begin{theorem}[Unicitat de \ensuremath{\cosdefraccions(D)}]
-		\labelname{Teorema d'unicitat del cos de fraccions d'un domini}\label{tmh:unicitat del cos de fraccions d'un domini}
+		\labelname{Teorema d'unicitat del cos de fraccions d'un domini}\label{thm:unicitat del cos de fraccions d'un domini}
 		Siguin \(D\) un domini d'integritat amb la suma \(+\) i el producte \(\cdot\) i \(\cosdefraccions_{1}(D)\) i \(\cosdefraccions_{2}(D)\) dos cossos  amb la suma \(+\) i el producte \(\cdot\). Aleshores
 		\[\cosdefraccions_{1}(D)\cong\cosdefraccions_{2}(D)\]
 		\begin{proof}
